--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.13",
+        "autoprefixer": "^10.4.19",
+        "laravel-vite-plugin": "^1.0.0",
+        "postcss": "^8.4.38",
+        "postcss-nesting": "^12.1.2",
+        "tailwindcss": "^3.4.3",
+        "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "flickity": "^3.0.0"
     }
 }
